<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/estrellas"
    tools:context=".Conversor_Sickle">

    <Button
        android:id="@+id/button22"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:onClick="Calcular"
        android:text="@string/button"
        android:textColor="#D8D0D0"
        android:textColorHint="#D8D0D0"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner2" />

    <Button
        android:id="@+id/button23"
        android:layout_width="263dp"
        android:layout_height="43dp"
        android:layout_marginTop="28dp"
        android:onClick="Galeon"
        android:text="@string/item1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.244"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_resultado2" />

    <Button
        android:id="@+id/button24"
        android:layout_width="263dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:onClick="Knut"
        android:text="@string/item3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.236"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button23" />

    <TextView
        android:id="@+id/tv_resultado2"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:text="@string/tv_resultados"
        android:textColor="#D8D0D0"
        android:textColorHint="#D8D0D0"
        android:textSize="22sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button22" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_valor2" />

    <EditText
        android:id="@+id/txt_valor2"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:hint="@string/txt_valor2"
        android:inputType="number"
        android:textColor="#D8D0D0"
        android:textColorHint="#D8D0D0"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Conversor de Sickle"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button25"
        android:layout_width="263dp"
        android:layout_height="45dp"
        android:onClick="Menu"
        android:text="@string/menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.236"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button24"
        app:layout_constraintVertical_bias="0.49" />
</androidx.constraintlayout.widget.ConstraintLayout>