<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/oscuro"
    tools:context=".Conversor_Knut">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Conversor de Knut"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_valor3"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/txt_valor3"
        android:inputType="number"
        android:textColor="#D8D0D0"
        android:textColorHint="#D8D0D0"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="72dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_valor3"
        tools:layout_editor_absoluteX="30dp" />

    <Button
        android:id="@+id/button27"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="52dp"
        android:onClick="Calcular"
        android:text="@string/button"
        android:textColor="#D8D0D0"
        android:textColorHint="#D8D0D0"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner3" />

    <TextView
        android:id="@+id/tv_resultado3"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="52dp"
        android:text="@string/tv_resultados"
        android:textColor="#D8D0D0"
        android:textColorHint="#D8D0D0"
        android:textSize="22sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.366"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button27" />

    <Button
        android:id="@+id/button28"
        android:layout_width="263dp"
        android:layout_height="43dp"
        android:layout_marginTop="56dp"
        android:onClick="Galeon"
        android:text="@string/item1"
        android:textColor="#D8D0D0"
        android:textColorHint="#D8D0D0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_resultado3" />

    <Button
        android:id="@+id/button29"
        android:layout_width="263dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:onClick="Sickle"
        android:text="@string/item2"
        android:textColor="#D8D0D0"
        android:textColorHint="#D8D0D0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button28" />

    <Button
        android:id="@+id/button30"
        android:layout_width="263dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:onClick="Menu"
        android:text="@string/menu"
        android:textColor="#D8D0D0"
        android:textColorHint="#D8D0D0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button29" />
</androidx.constraintlayout.widget.ConstraintLayout>