<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/black"
    app:layout_wrapBehaviorInParent="horizontal_only"
    tools:context=".Conversor">

    <TextView
        android:id="@+id/tv_resultado"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:text="@string/tv_resultados"
        android:textColor="#D8D0D0"
        android:textColorHint="#D8D0D0"
        android:textSize="22sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button19" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.278"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_valor1" />

    <EditText
        android:id="@+id/txt_valor1"
        android:layout_width="352dp"
        android:layout_height="50dp"
        android:layout_marginTop="116dp"
        android:ems="10"
        android:hint="@string/txt_valor1"
        android:inputType="number"
        android:textColor="#D8D0D0"
        android:textColorHint="#D8D0D0"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.288"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button19"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:onClick="Calcular"
        android:text="@string/button"
        android:textColor="#D8D0D0"
        android:textColorHint="#D8D0D0"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.239"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />



    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="Conversor de Galeones"
        android:textColor="#FDF9F9"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button26"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginBottom="28dp"
        android:onClick="Menu"
        android:text="@string/menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button21"
        app:layout_constraintVertical_bias="0.619" />

    <Button
        android:id="@+id/button31"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:onClick="Sickle"
        android:text="@string/item2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_resultado" />

    <Button
        android:id="@+id/button32"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:onClick="Knut"
        android:text="@string/item3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button31" />
</androidx.constraintlayout.widget.ConstraintLayout>